--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "^17.0.1",
     "react-blockly": "^7.0.0-alpha.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
